Fix spinner stretching issue

--- a/components/HomePage/HomePage.module.scss
+++ b/components/HomePage/HomePage.module.scss
@@ -4,8 +4,5 @@
     padding: globals.$padding;
     .hero {
         margin-bottom: globals.$padding-sm;
-        img {
-            width: 100%;
-        }
     }
 }
